grammar.js
      cypher: ($) => seq($.statement, repeat(seq(';', $.statement)), optional(';')),
      statement: ($) => seq(optional(choice(word('profile'), word('explain'))), $.query),
      query: $ => choice($.regular_query, $.standalone_call, $.show_command, $.schema_command),
      regular_query: ($) => seq($.single_query, repeat($.union)),
      union: ($) => seq(word('union'), optional(word('all')), $.single_query),
      single_query: ($) => choice($.single_part_query, $.multi_part_query),
      single_part_query: ($) => choice(seq(repeat($.reading_clause), $.return), seq(repeat($.reading_clause), repeat1($.updating_clause), optional($.return))),
      multi_part_query: ($) => seq(repeat1(seq(repeat($.reading_clause), repeat($.updating_clause), $.with)), $.single_part_query),
      updating_clause: ($) => choice($.create, $.merge, $.delete, $.set, $.remove, $.foreach, $.call_subquery),
      reading_clause: ($) => choice($.match, $.unwind, $.in_query_call, $.load_csv),
      load_csv: ($) => seq(word('load'), word('csv'), optional(seq(word('with'), word('headers'))), word('from'), $.expression, word('as'), $.variable, optional(seq(word('fieldterminator'), $.string_literal))),
      match: ($) => seq(optional(word('optional')), word('match'), $.pattern, repeat($.hint), optional($.where)),
      hint: ($) => choice($.using_index, $.using_scan, $.using_join),
      using_index: ($) => seq(word('using'), word('index'), optional(word('seek')), $.variable, $.node_label, '(', $.property_key_name, repeat(seq(',', $.property_key_name)), ')'),
      using_join: ($) => seq(word('using'), word('join'), word('on'), $.variable, repeat(seq(',', $.variable))),
      merge: ($) => seq(word('merge'), $.pattern_part, repeat($.merge_action)),
      create: ($) => seq(word('create'), $.pattern),
      set: ($) => seq(word('set'), $.set_item, repeat(seq(',', $.set_item))),
      set_item: ($) => choice(seq($.property_expression, '=', $.expression), seq($.variable, choice('+=', '='), $.expression), seq($.variable, $.node_labels)),
      foreach: ($) => seq(word('foreach'), '(', $.variable, word('in'), $.expression, '|', repeat1($.updating_clause), ')'),
      call_subquery: ($) => seq(word('call'), '{', $.regular_query, '}', optional($.subquery_in_transactions)),
      subquery_in_transactions: ($) => seq(word('in'), word('transactions'), optional(seq(word('of'), $.expression, choice(word('rows'), word('row'))))),
      show_command: ($) => seq(word('show'), $._show_entity, optional($.show_tail)),
      _show_entity: ($) => choice(
        seq(repeat($._show_modifier), $._show_object, optional($._executable)),
        seq(word('database'), $.symbolic_name),
        seq(word('default'), word('database')),
        seq(word('home'), word('database')),
      ),
      show_tail: ($) => choice(word('brief'), seq(word('verbose'), optional(word('output'))), seq(word('yield'), $.yield_items, optional($.order), optional($.skip), optional($.limit), optional($.return)), $.where),
      schema_command: ($) => choice($.create_index, $.drop_index, $.create_constraint, $.drop_constraint),
      create_index: ($) => seq(word('create'), optional(choice(word('btree'), word('range'), word('text'), word('point'))), choice(word('index'), word('indexes')), optional($.symbolic_name), optional($._if_not_exists), word('for'), $._schema_pattern, word('on'), '(', $.property_expression, repeat(seq(',', $.property_expression)), ')'),
      drop_index: ($) => seq(word('drop'), choice(word('index'), word('indexes')), choice(seq($.symbolic_name, optional($._if_exists)), seq(word('on'), $.node_label, '(', $.property_key_name, repeat(seq(',', $.property_key_name)), ')'))),
      create_constraint: ($) => seq(word('create'), word('constraint'), optional($.symbolic_name), optional($._if_not_exists), choice(seq(word('for'), $._schema_pattern, word('require'), $._constraint_predicate), seq(word('on'), $._schema_pattern, word('assert'), $._constraint_predicate))),
      _schema_pattern: ($) => choice($.node_pattern, $.relationships_pattern),
      _constraint_predicate: ($) => seq(choice($._constraint_property, seq('(', $._constraint_property, repeat(seq(',', $._constraint_property)), ')')), choice(seq(word('is'), word('unique')), seq(word('is'), word('not'), word('null')), seq(word('is'), word('node'), word('key')))),
      _if_not_exists: ($) => seq(word('if'), word('not'), word('exists')),
      _if_exists: ($) => seq(word('if'), word('exists')),
      yield_items: ($) => seq(choice('*', seq($.yield_item, repeat(seq(',', $.yield_item)))), optional($.where)),
      yield_item: ($) => seq(optional(seq($.procedure_result_field, word('as'))), $.variable),
      with: ($) => seq(word('with'), $.projection_body, optional($.where)),
      return: ($) => seq(word('return'), $.projection_body),
      projection_body: ($) => seq(optional(word('distinct')), $.projection_items, optional($.order), optional($.skip), optional($.limit)),
      projection_items: ($) => choice(seq('*', repeat(seq(',', $.projection_item))), seq($.projection_item, repeat(seq(',', $.projection_item)))),
      projection_item: ($) => choice($.expression, seq($.expression, word('as'), $.variable)),
      where: ($) => seq(word('where'), $.expression),
      pattern: ($) => seq($.pattern_part, repeat(seq(',', $.pattern_part))),
      pattern_part: ($) => choice(seq($.variable, '=', $.anonymous_pattern_part), $.anonymous_pattern_part),
      anonymous_pattern_part: ($) => choice($.shortest_path_pattern, $.pattern_element),
      pattern_element: ($) => choice(seq($.node_pattern, repeat($.pattern_element_chain)), seq('(', $.pattern_element, ')')),
      /*
       * Rule that was extracted from common pattern on `note_pattern` and `parenthesized_expression`.
       * Both of them could be expressed as `(variable)` what caused the tree to be generated in
       * favour of one of those rules.
       * In short: I couldn't find a way to fix the problem without this "artificial" rule.
       */
      node_pattern: ($) => prec(1, choice($.variable_in_parens, seq('(', optional($.variable), optional($.node_labels), optional($.properties), ')'))),
      pattern_element_chain: ($) => seq($.relationship_pattern, $.node_pattern),
      relationship_pattern: ($) => seq(optional($.left_arrow_head), $.dash, optional($.relationship_detail), $.dash, optional($.right_arrow_head)),
      relationship_detail: ($) => seq('[', optional($.variable), optional($.relationship_types), optional($.range_literal), optional($.properties), ']'),
      // TODO: ensure that the precedence here does not break grammar.
      properties: ($) => prec(1, choice($.map_literal, $.parameter)),
      relationship_types: ($) => seq(':', $.rel_type_name, repeat(seq('|', optional(':'), $.rel_type_name))),
      node_labels: ($) => prec.right(repeat1($.node_label)),
      node_label: ($) => seq(':', $.label_name),
      range_literal: ($) => seq('*', optional($.integer_literal), optional(seq('..', optional($.integer_literal)))),
      label_name: ($) => $.schema_name,
      rel_type_name: ($) => $.schema_name,
      expression: ($) => choice($.or_expression, $.xor_expression, $.and_expression, $.not_expression, $.comparison_expression, $.string_list_null_predicate_expression, $.additive_expression, $.multiplicative_expression, $.exponential_expression, $.unary_expression, $.list_operator_expression, $.property_or_labels_expression, $.atom),
      comparison_expression: ($) => prec.left(5, seq($.expression, seq(choice('=', '<>', '<', '>', '<=', '>='), $.expression))),
      string_list_null_predicate_expression: ($) => prec(6, seq($.expression, choice($.list_predicate_expression, $.string_predicate_expression, $.null_predicate_expression))),
      string_predicate_expression: ($) => prec.left(6, seq(choice(seq(word('starts'), word('with')), seq(word('ends'), word('with')), seq(word('contains'))), $.expression)),
      list_operator_expression: ($) => prec(11, seq($.expression, choice(seq('[', $.expression, ']'), seq('[', optional($.expression), '..', optional($.expression), ']')))),
      property_or_labels_expression: ($) => prec.right(11, seq($.expression, choice(seq(repeat1($.property_lookup), optional($.node_labels)), seq(repeat($.property_lookup), $.node_labels)))),
      atom: ($) => choice($.literal, $.parameter, $.case_expression, seq(word('count'), /\(\s*\*\s*\)/), $.reduce_expression, $.extract_function, $.filter_function, $.map_projection, $.list_comprehension, $.pattern_comprehension, $.quantifier, $.shortest_path_pattern, $.pattern_predicate, $.parenthesized_expression, $.function_invocation, $.existential_subquery, prec.left($.variable)),
      literal: ($) => choice($.number_literal, $.string_literal, $.boolean_literal, $.null_literal, $.map_literal, $.list_literal),
      boolean_literal: () => choice(word('true'), word('false')),
      function_invocation: ($) => seq($.function_name, '(', optional(word('distinct')), optional(seq($.expression, repeat(seq(',', $.expression)))), ')'),
      function_name: ($) => seq(optional($.namespace), $.symbolic_name),
      property_lookup: ($) => seq('.', $.property_key_name),
      variable: ($) => $.symbolic_name,
      string_literal: ($) => choice(seq(`'`, repeat(choice(/[^'\\]+/, $.escaped_char)), `'`), seq(`"`, repeat(choice(/[^"\\]+/, $.escaped_char)), `"`)),
      number_literal: ($) => choice($.double_literal, $.integer_literal),
      map_literal: ($) => seq('{', optional(seq($.property_key_name, ':', $.expression, repeat(seq(',', $.property_key_name, ':', $.expression)))), '}'),
      property_expression: ($) => seq($.atom, repeat($.property_lookup)),
      property_key_name: ($) => $.schema_name,
      integer_literal: ($) => choice($.hex_integer, $.octal_integer, $.decimal_integer),
      decimal_integer: () => choice('0', /[1-9][0-9]*/),
      schema_name: ($) => choice($.symbolic_name, $.reserved_word),
      symbolic_name: ($) => prec.left(choice($.unescaped_symbolic_name, $.escaped_symbolic_name, word('count'), word('any'), word('none'), word('single'))),
      unescaped_symbolic_name: ($) => (/(\p{ID_Start}|\p{Pc})(\p{ID_Continue}|\p{Sc})*/u),
      right_arrow_head: () => choice('>', '\u{27e9}', '\u{3009}', '\u{fe65}', '\u{ff1e}'),
      dash: () => choice('-', '\u{00ad}', '\u{2010}', '\u{2011}', '\u{2012}', '\u{2013}', '\u{2014}', '\u{2015}', '\u{2212}', '\u{fe58}', '\u{fe63}', '\u{ff0d}'),
