test/corpus/neo4j-4_4.txt
==================
PROFILE prefix
==================

PROFILE MATCH (n:Person) RETURN n

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name)))))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))

==================
EXPLAIN prefix
==================

EXPLAIN MATCH (n) RETURN count(n)

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (function_invocation
                          (function_name
                            (symbolic_name))
                          (expression
                            (atom
                              (variable
                                (symbolic_name
                                  (unescaped_symbolic_name))))))))))))))))))

==================
FOREACH updating clause
==================

MATCH p=(a)-[*]->(b)
FOREACH (n IN nodes(p) | SET n.marked = true)

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (variable
                      (symbolic_name
                        (unescaped_symbolic_name)))
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (relationship_detail
                              (range_literal))
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))))))))))
            (updating_clause
              (foreach
                (variable
                  (symbolic_name
                    (unescaped_symbolic_name)))
                (expression
                  (atom
                    (function_invocation
                      (function_name
                        (symbolic_name
                          (unescaped_symbolic_name)))
                      (expression
                        (atom
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name))))))))
                (updating_clause
                  (set
                    (set_item
                      (property_expression
                        (atom
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name))))
                        (property_lookup
                          (property_key_name
                            (schema_name
                              (symbolic_name
                                (unescaped_symbolic_name))))))
                      (expression
                        (atom
                          (literal
                            (boolean_literal)))))))))))))))

==================
LOAD CSV with headers and fieldterminator
==================

LOAD CSV WITH HEADERS FROM 'file:///data.csv' AS row FIELDTERMINATOR ';'
MERGE (p:Person {id: row.id})

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (load_csv
                (expression
                  (atom
                    (literal
                      (string_literal))))
                (variable
                  (symbolic_name
                    (unescaped_symbolic_name)))
                (string_literal)))
            (updating_clause
              (merge
                (pattern_part
                  (anonymous_pattern_part
                    (pattern_element
                      (node_pattern
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))
                        (node_labels
                          (node_label
                            (label_name
                              (schema_name
                                (symbolic_name
                                  (unescaped_symbolic_name))))))
                        (properties
                          (map_literal
                            (property_key_name
                              (schema_name
                                (symbolic_name
                                  (unescaped_symbolic_name))))
                            (expression
                              (property_or_labels_expression
                                (expression
                                  (atom
                                    (variable
                                      (symbolic_name
                                        (unescaped_symbolic_name)))))
                                (property_lookup
                                  (property_key_name
                                    (schema_name
                                      (symbolic_name
                                        (unescaped_symbolic_name)))))))))))))))))))))

==================
USING INDEX hint
==================

MATCH (n:Person)
USING INDEX n:Person(name)
WHERE n.name = 'A'
RETURN n

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name)))))))))))
                (hint
                  (using_index
                    (variable
                      (symbolic_name
                        (unescaped_symbolic_name)))
                    (node_label
                      (label_name
                        (schema_name
                          (symbolic_name
                            (unescaped_symbolic_name)))))
                    (property_key_name
                      (schema_name
                        (symbolic_name
                          (unescaped_symbolic_name))))))
                (where
                  (expression
                    (comparison_expression
                      (expression
                        (property_or_labels_expression
                          (expression
                            (atom
                              (variable
                                (symbolic_name
                                  (unescaped_symbolic_name)))))
                          (property_lookup
                            (property_key_name
                              (schema_name
                                (symbolic_name
                                  (unescaped_symbolic_name)))))))
                      (expression
                        (atom
                          (literal
                            (string_literal)))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))

==================
USING JOIN ON hint
==================

MATCH (a:A)-->(b:B)
USING JOIN ON a, b
RETURN a, b

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name)))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))
                            (node_labels
                              (node_label
                                (label_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))))))))
                (hint
                  (using_join
                    (variable
                      (symbolic_name
                        (unescaped_symbolic_name)))
                    (variable
                      (symbolic_name
                        (unescaped_symbolic_name)))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name))))))
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))

==================
SHOW INDEXES
==================

SHOW INDEXES

---

(cypher
  (statement
    (query
      (show_command))))

==================
SHOW ALL CONSTRAINTS with YIELD and WHERE
==================

SHOW ALL CONSTRAINTS YIELD name, type WHERE name STARTS WITH 'x'

---

(cypher
  (statement
    (query
      (show_command
        (show_tail
          (yield_items
            (yield_item
              (variable
                (symbolic_name
                  (unescaped_symbolic_name))))
            (yield_item
              (variable
                (symbolic_name
                  (unescaped_symbolic_name))))
            (where
              (expression
                (string_list_null_predicate_expression
                  (expression
                    (atom
                      (variable
                        (symbolic_name
                          (unescaped_symbolic_name)))))
                  (string_predicate_expression
                    (expression
                      (atom
                        (literal
                          (string_literal))))))))))))))

==================
SHOW BUILT IN FUNCTIONS EXECUTABLE
==================

SHOW BUILT IN FUNCTIONS EXECUTABLE BY CURRENT USER

---

(cypher
  (statement
    (query
      (show_command))))

==================
SHOW NODE KEY CONSTRAINTS
==================

SHOW NODE KEY CONSTRAINTS

---

(cypher
  (statement
    (query
      (show_command))))

==================
CREATE INDEX for node property
==================

CREATE INDEX person_name FOR (n:Person) ON (n.name)

---

(cypher
  (statement
    (query
      (schema_command
        (create_index
          (symbolic_name
            (unescaped_symbolic_name))
          (node_pattern
            (variable
              (symbolic_name
                (unescaped_symbolic_name)))
            (node_labels
              (node_label
                (label_name
                  (schema_name
                    (symbolic_name
                      (unescaped_symbolic_name)))))))
          (property_expression
            (atom
              (variable
                (symbolic_name
                  (unescaped_symbolic_name))))
            (property_lookup
              (property_key_name
                (schema_name
                  (symbolic_name
                    (unescaped_symbolic_name)))))))))))

==================
CREATE CONSTRAINT REQUIRE IS UNIQUE with IF NOT EXISTS
==================

CREATE CONSTRAINT uniq_email IF NOT EXISTS FOR (u:User) REQUIRE u.email IS UNIQUE

---

(cypher
  (statement
    (query
      (schema_command
        (create_constraint
          (symbolic_name
            (unescaped_symbolic_name))
          (node_pattern
            (variable
              (symbolic_name
                (unescaped_symbolic_name)))
            (node_labels
              (node_label
                (label_name
                  (schema_name
                    (symbolic_name
                      (unescaped_symbolic_name)))))))
          (variable
            (symbolic_name
              (unescaped_symbolic_name)))
          (property_lookup
            (property_key_name
              (schema_name
                (symbolic_name
                  (unescaped_symbolic_name))))))))))

==================
CREATE CONSTRAINT NODE KEY composite
==================

CREATE CONSTRAINT FOR (p:Person) REQUIRE (p.first, p.last) IS NODE KEY

---

(cypher
  (statement
    (query
      (schema_command
        (create_constraint
          (node_pattern
            (variable
              (symbolic_name
                (unescaped_symbolic_name)))
            (node_labels
              (node_label
                (label_name
                  (schema_name
                    (symbolic_name
                      (unescaped_symbolic_name)))))))
          (variable
            (symbolic_name
              (unescaped_symbolic_name)))
          (property_lookup
            (property_key_name
              (schema_name
                (symbolic_name
                  (unescaped_symbolic_name)))))
          (variable
            (symbolic_name
              (unescaped_symbolic_name)))
          (property_lookup
            (property_key_name
              (schema_name
                (symbolic_name
                  (unescaped_symbolic_name))))))))))

==================
DROP INDEX and DROP CONSTRAINT
==================

DROP INDEX person_name

---

(cypher
  (statement
    (query
      (schema_command
        (drop_index
          (symbolic_name
            (unescaped_symbolic_name)))))))

==================
Plain CREATE is still an updating clause
==================

CREATE (n:Person) RETURN n

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (updating_clause
              (create
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name)))))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))

==================
CALL subquery returning rows
==================

CALL { MATCH (p:Person) RETURN p } RETURN count(*)

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (updating_clause
              (call_subquery
                (regular_query
                  (single_query
                    (single_part_query
                      (reading_clause
                        (match
                          (pattern
                            (pattern_part
                              (anonymous_pattern_part
                                (pattern_element
                                  (node_pattern
                                    (variable
                                      (symbolic_name
                                        (unescaped_symbolic_name)))
                                    (node_labels
                                      (node_label
                                        (label_name
                                          (schema_name
                                            (symbolic_name
                                              (unescaped_symbolic_name)))))))))))))
                      (return
                        (projection_body
                          (projection_items
                            (projection_item
                              (expression
                                (atom
                                  (variable
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom))))))))))))

==================
CALL subquery importing with WITH
==================

MATCH (n) CALL { WITH n MATCH (n)-[:KNOWS]->(f) RETURN f } RETURN n, f

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name))))))))))
            (updating_clause
              (call_subquery
                (regular_query
                  (single_query
                    (multi_part_query
                      (with
                        (projection_body
                          (projection_items
                            (projection_item
                              (expression
                                (atom
                                  (variable
                                    (symbolic_name
                                      (unescaped_symbolic_name)))))))))
                      (single_part_query
                        (reading_clause
                          (match
                            (pattern
                              (pattern_part
                                (anonymous_pattern_part
                                  (pattern_element
                                    (node_pattern
                                      (variable
                                        (symbolic_name
                                          (unescaped_symbolic_name))))
                                    (pattern_element_chain
                                      (relationship_pattern
                                        (dash)
                                        (relationship_detail
                                          (relationship_types
                                            (rel_type_name
                                              (schema_name
                                                (symbolic_name
                                                  (unescaped_symbolic_name))))))
                                        (dash)
                                        (right_arrow_head))
                                      (node_pattern
                                        (variable
                                          (symbolic_name
                                            (unescaped_symbolic_name)))))))))))
                        (return
                          (projection_body
                            (projection_items
                              (projection_item
                                (expression
                                  (atom
                                    (variable
                                      (symbolic_name
                                        (unescaped_symbolic_name)))))))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name))))))
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))

==================
CALL subquery IN TRANSACTIONS
==================

LOAD CSV FROM 'file:///x.csv' AS row CALL { WITH row CREATE (:Item {id: row[0]}) } IN TRANSACTIONS OF 500 ROWS

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (load_csv
                (expression
                  (atom
                    (literal
                      (string_literal))))
                (variable
                  (symbolic_name
                    (unescaped_symbolic_name)))))
            (updating_clause
              (call_subquery
                (regular_query
                  (single_query
                    (multi_part_query
                      (with
                        (projection_body
                          (projection_items
                            (projection_item
                              (expression
                                (atom
                                  (variable
                                    (symbolic_name
                                      (unescaped_symbolic_name)))))))))
                      (single_part_query
                        (updating_clause
                          (create
                            (pattern
                              (pattern_part
                                (anonymous_pattern_part
                                  (pattern_element
                                    (node_pattern
                                      (node_labels
                                        (node_label
                                          (label_name
                                            (schema_name
                                              (symbolic_name
                                                (unescaped_symbolic_name))))))
                                      (properties
                                        (map_literal
                                          (property_key_name
                                            (schema_name
                                              (symbolic_name
                                                (unescaped_symbolic_name))))
                                          (expression
                                            (list_operator_expression
                                              (expression
                                                (atom
                                                  (variable
                                                    (symbolic_name
                                                      (unescaped_symbolic_name)))))
                                              (expression
                                                (atom
                                                  (literal
                                                    (number_literal
                                                      (integer_literal
                                                        (decimal_integer)))))))))))))))))))))
                (subquery_in_transactions
                  (expression
                    (atom
                      (literal
                        (number_literal
                          (integer_literal
                            (decimal_integer)))))))))))))))

==================
CALL subquery with UNION
==================

CALL { MATCH (a:A) RETURN a AS x UNION MATCH (b:B) RETURN b AS x } RETURN x

---

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (updating_clause
              (call_subquery
                (regular_query
                  (single_query
                    (single_part_query
                      (reading_clause
                        (match
                          (pattern
                            (pattern_part
                              (anonymous_pattern_part
                                (pattern_element
                                  (node_pattern
                                    (variable
                                      (symbolic_name
                                        (unescaped_symbolic_name)))
                                    (node_labels
                                      (node_label
                                        (label_name
                                          (schema_name
                                            (symbolic_name
                                              (unescaped_symbolic_name)))))))))))))
                      (return
                        (projection_body
                          (projection_items
                            (projection_item
                              (expression
                                (atom
                                  (variable
                                    (symbolic_name
                                      (unescaped_symbolic_name)))))
                              (variable
                                (symbolic_name
                                  (unescaped_symbolic_name)))))))))
                  (union
                    (single_query
                      (single_part_query
                        (reading_clause
                          (match
                            (pattern
                              (pattern_part
                                (anonymous_pattern_part
                                  (pattern_element
                                    (node_pattern
                                      (variable
                                        (symbolic_name
                                          (unescaped_symbolic_name)))
                                      (node_labels
                                        (node_label
                                          (label_name
                                            (schema_name
                                              (symbolic_name
                                                (unescaped_symbolic_name)))))))))))))
                        (return
                          (projection_body
                            (projection_items
                              (projection_item
                                (expression
                                  (atom
                                    (variable
                                      (symbolic_name
                                        (unescaped_symbolic_name)))))
                                (variable
                                  (symbolic_name
                                    (unescaped_symbolic_name)))))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))
